# multinegocios-ai-saas

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4a20d6cf410a_init.py  f9a07e2259cd_create_products_table.py
backend/app/agents/: crew.py  crm.py  description.py  extractor.py  margin.py  security.py  validator.py
backend/app/core/: config.py  security.py
backend/app/core/security/: audit.py  crypto.py  exceptions.py  rate_limit.py  validation.py
backend/app/db/: session.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  lead.py  product.py
backend/app/services/: crew_service.py  lead_processing_service.py
docs/: AI_GOVERNANCE_POLICY.md  CLAUDECODE_PROMPT_TEMPLATE.md  CODE_REVIEW_CHECKLIST.md  DEPLOYMENT_STRATEGY.md
